Fix top scroll offset on mobile and blue border displaying outside of title on safari

--- a/docs/_sass/_main.scss
+++ b/docs/_sass/_main.scss
@@ -14,6 +14,10 @@
 
 html {
     line-height: 1;
+
+    @include maxBreakpoint($breakpoint-tablet) {
+        scroll-padding-top: 80px;        
+    }
 }
 
 table {
@@ -312,16 +316,6 @@ button {
     h1 {
         &.title {
             font-size: 2.25em;
-        }
-    }
-
-    h1::before, h2::before {
-        @include maxBreakpoint($breakpoint-tablet) {
-            display: block;
-            content: ' ';
-            height: 80px; 
-            margin-top: -80px;
-            visibility: hidden;
         }
     }
 
